--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@dashevo/dashcore-node",
+  "name": "@xazab/xazabcore-node",
   "description": "Full node with extended capabilities using Dashcore and Dash Core (dashd)",
   "author": "BitPay <dev@bitpay.com>",
   "version": "6.0.0",
   "main": "./index.js",
-  "repository": "git://github.com/dashevo/dashcore-node.git",
-  "homepage": "https://github.com/dashevo/dashcore-node",
+  "repository": "git://github.com/xazab/xazabcore-node.git",
+  "homepage": "https://github.com/xazab/xazabcore-node",
   "bugs": {
-    "url": "https://github.com/dashevo/dashcore-node/issues"
+    "url": "https://github.com/xazab/xazabcore-node/issues"
   },
   "contributors": [
     {
@@ -27,7 +27,7 @@
     }
   ],
   "bin": {
-    "dashcore-node": "./bin/dashcore-node"
+    "xazabcore-node": "./bin/xazabcore-node"
   },
   "scripts": {
     "test": "mocha -R spec --recursive",
@@ -46,8 +46,8 @@
     "dashd"
   ],
   "dependencies": {
-    "@dashevo/dashcore-lib": "^0.18.12",
-    "@dashevo/dashd-rpc": "^2.0.0",
+    "@xazab/xazabcore-lib": "^0.18.12",
+    "@xazab/dashd-rpc": "^2.0.0",
     "async": "^2.6.2",
     "body-parser": "^1.19.0",
     "colors": "^1.3.3",
@@ -68,7 +68,7 @@
     "utf-8-validate": "~5.0.2"
   },
   "devDependencies": {
-    "@dashevo/dashcore-p2p": "^1.1.9",
+    "@xazab/dashcore-p2p": "^1.1.9",
     "benchmark": "2.1.4",
     "chai": "^4.2.0",
     "coveralls": "^3.0.4",
