--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xazab/xazabcore-node",
-  "description": "Full node with extended capabilities using Dashcore and Dash Core (dashd)",
+  "description": "Full node with extended capabilities using Xazabcore and Xazab Core (xazabd)",
   "author": "BitPay <dev@bitpay.com>",
   "version": "6.0.0",
   "main": "./index.js",
@@ -39,15 +39,15 @@
     "check-package": "npm run check-package:name && npm run check-package:version",
     "check-package:name": "test $(jq -r .name package.json) = $(jq -r .name package-lock.json)",
     "check-package:version": "test $(jq -r .version package.json) = $(jq -r .version package-lock.json)",
-    "dashd_test": "./node_modules/.bin/mocha test/services/dashd.unit.js"
+    "xazabd_test": "./node_modules/.bin/mocha test/services/xazabd.unit.js"
   },
   "tags": [
-    "dash",
-    "dashd"
+    "xazab",
+    "xazabd"
   ],
   "dependencies": {
     "@xazab/xazabcore-lib": "^0.18.12",
-    "@xazab/dashd-rpc": "^2.0.0",
+    "@xazab/xazabd-rpc": "^2.0.0",
     "async": "^2.6.2",
     "body-parser": "^1.19.0",
     "colors": "^1.3.3",
@@ -68,7 +68,7 @@
     "utf-8-validate": "~5.0.2"
   },
   "devDependencies": {
-    "@xazab/dashcore-p2p": "^1.1.9",
+    "@xazab/xazabcore-p2p": "^1.1.9",
     "benchmark": "2.1.4",
     "chai": "^4.2.0",
     "coveralls": "^3.0.4",
